# Fractol

./: CMakeLists.txt  Makefile  README.md
inc/: error_message.h  fractol.h  key_define.h
minilibx_macos/: Makefile
minilibx_macos/src/: mlx_init_loop.m
src/: draw_win.c  event_handler.c  init.c  iteration.c  julia.c  main.c  mandelbrot.c  math_fun.c  mouse_hook.c  print_image.c
